added a popup and javascript

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="form-check">
           <label class="form-check-label">
-            <input type="checkbox" class="form-check-input" name="conditions" id="conditions" value="checkedValue">
+            <input type="checkbox" class="form-check-input" name="conditions" id="conditions" value="checkedValue" required>
             I agree to the <a href="#">terms & conditions</a>
           </label>
         </div>
@@ -49,5 +49,21 @@
     </div>
 
   </div>
+
+  <div class="pop-up-display">
+    <div class="pop-up">
+      <div class="pop-up-content">
+        <button type="button" class="close-button">X</button>
+        <div class="pop-up-header">
+          <img src="./ressources/Welcome@2x.png" alt="image">
+        </div>
+        <div class="pop-up-body">
+          <h2>Welcome!</h2>
+          <p>Thanks for filling out the form. A confirmation email has been sent to your hotmail account.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="main.js"></script>
 </body>
 </html>
