fixed submit issue

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    <form class="form-bloc">
+    <form class="form-bloc" id="form-submit">
       <div>
         <h6 class="limited-tag" >Limited Offer</h6>
       </div>
